Add table template to display library

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Pages</th>
+            <th>Read status</th>
+        </tr>
     
+        <tr>
+            <td>Harry Potter</td>
+            <td>JK Rowling</td>
+            <td>123</td>
+            <td>true</td>
+        </tr>
+    </table>
 </body>
 </html>
