Add function to display books in library table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <table>
+    <table id="library-table">
         <tr>
             <th>Title</th>
             <th>Author</th>
@@ -17,12 +17,6 @@
             <th>Read status</th>
         </tr>
     
-        <tr>
-            <td>Harry Potter</td>
-            <td>JK Rowling</td>
-            <td>123</td>
-            <td>true</td>
-        </tr>
     </table>
 </body>
 </html>
