--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <th>Author</th>
             <th>Pages</th>
             <th>Read status</th>
+            <th>Delete</th>
         </tr>
     
     </table>
